--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
+* {
+  box-sizing: border-box;
+}
 
 :root {
-  margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 
   width: 100vw;
@@ -18,6 +19,8 @@ body {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
+
+  min-height: 100vh;
   
   background-color: #242424;
   
