--- a/src/components/List/List.css
+++ b/src/components/List/List.css
@@ -1,19 +1,21 @@
-section{
+section {
+  align-self: flex-start;
+  
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
 
 h2 {
-  font-size: 1.2rem;
-  margin: 0 0 20px 0;
+  font-size: 1rem;
+  margin: 0 0 15px 0;
 }
 
-.list{
+.list {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 15px;
   max-width: 220px;
 
   border-radius: 8px;
@@ -30,10 +32,11 @@ h2 {
   gap:20px;
 }
 
-.active {
+.btn-item {
+  font-size: x-small;
   min-width: 78px;
   cursor: unset;
 }
-.active:focus {
+.btn-item:focus {
   outline: none
 }
